# easyx_demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  runVSCode.bat  vcpkg.json
easyx240225/include/: easyx.h  graphics.h
src/: main.cpp  opencvDemo.cpp  utils.h
